After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708877 - gnome-bg: set error when parsing XML file that's not a slide show
gnome-bg: set error when parsing XML file that's not a slide show
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: Background
unspecified
Other All
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-26 21:11 UTC by Ray Strode [halfline]
Modified: 2013-09-26 21:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gnome-bg: set error when parsing XML file that's not a slide show (3.07 KB, patch)
2013-09-26 21:11 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2013-09-26 21:11:44 UTC
While trying to reproduce a background handling bug in the shell I
decided to run:

    while true; do
        for f in ~/Pictures/*; do
            gsettings set org.gnome.desktop.background picture-uri "file:///$f"
            sleep .4;
        done;
    done

I noticed spew coming from gnome-shell:

    G_CRITICAL: g_task_return_error: assertion 'error != NULL' failed

Turns out I had a non-slideshow XML file in there, and it was failing
because there were 0 slides, but not setting an error.

This commit fixes that.
Comment 1 Ray Strode [halfline] 2013-09-26 21:11:45 UTC
Created attachment 255885 [details] [review]
gnome-bg: set error when parsing XML file that's not a slide show
Comment 2 Ray Strode [halfline] 2013-09-26 21:12:14 UTC
Attachment 255885 [details] pushed as 5e3ac2b - gnome-bg: set error when parsing XML file that's not a slide show