gnome-bg: set error when parsing XML file that's not a slide show

While trying to reproduce a background handling bug in the shell I
decided to run:

    while true; do
        for f in ~/Pictures/*; do
            gsettings set org.gnome.desktop.background picture-uri "file:///$f"
            sleep .4;
        done;
    done

I noticed spew coming from gnome-shell:

    G_CRITICAL: g_task_return_error: assertion 'error != NULL' failed

Turns out I had a non-slideshow XML file in there, and it was failing
because there were 0 slides, but not setting an error.

This commit fixes that.

https://bugzilla.gnome.org/show_bug.cgi?id=708877